crates/toml/tests/snapshots/invalid/ext/keys/no-eol-3.stderr
TOML parse error at line 2, column 6
  |
2 | 0="0"[[0000l0]]
  |      ^
unexpected key or value, expected newline, `#`

---
TOML parse error at line 3, column 6
  |
3 | 0="0"[[0000l0]]
  |      ^
unexpected key or value, expected newline, `#`

---
TOML parse error at line 4, column 6
  |
4 | 0="0"l="0"
  |      ^
unexpected key or value, expected newline, `#`

---
TOML parse error at line 3, column 1
  |
3 | 0="0"[[0000l0]]
  | ^
duplicate key

---
TOML parse error at line 4, column 1
  |
4 | 0="0"l="0"
  | ^
duplicate key
